# invarianteval

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
agent-skill/invarianteval/: README.md  SKILL.md  check.py  suite.template.yaml
deepeval_bridge/: __init__.py  bridge.py
docs/: architecture.md  case-study.md  mcp.md  online-eval.md  otel-ingest.md
examples/deepeval-bridge/: README.md
examples/fire-inspection-extraction/: README.md  baseline.json  suite.yaml
examples/fire-inspection-extraction/data/2026-06-23/: panel-001.txt  panel-002.txt  panel-003.txt  panel-004.txt  panel-005.txt
examples/fire-inspection-extraction/expected/: panel-001.json  panel-002.json  panel-003.json  panel-004.json  panel-005.json  schema.json
examples/fire-inspection-extraction/fixtures/good/: panel-001.json  panel-003.json  panel-004.json  panel-005.json
examples/fire-inspection-extraction/fixtures/regressed/: panel-001.json  panel-002.json
examples/fire-inspection-extraction/otel/: sample-traces.ndjson
invarianteval/: __init__.py  cli.py  cost.py  report.py
invarianteval/assertions/: __init__.py  deterministic.py  equivalence.py  invariants.py  judge.py  registry.py
invarianteval/core/: __init__.py  baseline.py  case.py  evidence.py  models.py  provenance.py  runner.py  suite.py  trace.py
invarianteval/ingest/: __init__.py  otel.py
invarianteval/mcp/: __init__.py  __main__.py  _policy.py  _stub.py  list_suite.py  server.py  verify.py
invarianteval/providers/: __init__.py  base.py  fallback.py  fixture.py  ollama.py  openai.py
pytest_invarianteval/: __init__.py  plugin.py
scripts/: record-demo-gif.py  run-gate.ps1  run-gate.sh
server/: __init__.py  auth_password.py  cli.py  db.py  main.py
server/db/: schema.sql
tests/integration/: test_pytest_plugin.py
tests/mcp/: conftest.py  test_list_suite.py  test_skill_check.py  test_verify.py
tests/platform/: conftest.py  test_auth_password.py  test_server.py  test_worker.py
tests/unit/: test_baseline.py  test_deterministic.py  test_equivalence_v2.py  test_evidence.py  test_invariants.py  test_judge_report.py  test_otel_ingest.py  test_provenance.py  test_schema_grounded.py
web/: index.html  package.json
web/src/: App.tsx  api.ts  styles.css
web/src/pages/: CaseDetail.tsx  Login.tsx  OnlineEval.tsx  Runs.tsx  Settings.tsx  Suites.tsx
worker/: __init__.py  main.py
